--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
   html: ^0.15.6
+  http: ^1.5.0
   lottie: ^3.3.1
   provider: ^6.1.5
   shimmer: ^3.0.0
