--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   http: ^1.5.0
   lottie: ^3.3.1
   provider: ^6.1.5
+  pull_to_refresh: ^2.0.0
   shimmer: ^3.0.0
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +30,8 @@ flutter:
   assets:
     - assets/lottie/mosque_lottie.json
     - assets/icon/app_icon.jpg
+    - assets/icon/masjid_icon.png
+    - assets/icon/kaaba_icon.png
   fonts:
     - family: Liter
       fonts:
