--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,10 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs access to your location to show prayer times</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>This app needs access to your location to show prayer times</string>
 	<key>CFBundleName</key>
 	<string>ramadhan_companion_app</string>
 	<key>CFBundlePackageType</key>
