--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
+  geocoding: ^4.0.0
+  geolocator: ^14.0.2
   html: ^0.15.6
   http: ^1.5.0
   lottie: ^3.3.1
