--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_core: ^4.0.0
   flutter:
     sdk: flutter
+  flutter_compass: ^0.8.1
   flutter_launcher_icons: ^0.14.4
   geocoding: ^4.0.0
   geolocator: ^14.0.2
