--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  collection: ^1.19.1
   firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
   flutter:
@@ -15,6 +16,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   geocoding: ^4.0.0
   geolocator: ^14.0.2
+  hijri: ^3.0.0
+  hijri_calendar: ^1.0.7+7
   html: ^0.15.6
   http: ^1.5.0
   lottie: ^3.3.1
@@ -38,6 +41,8 @@ flutter:
     - assets/icon/masjid_icon.png
     - assets/icon/kaaba_icon.png
     - assets/icon/star_icon.png
+    - assets/icon/islamic_calendar_icon.png
+    - assets/icon/glitter_icon.png
   fonts:
     - family: Liter
       fonts:
