--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   geocoding: ^4.0.0
   geolocator: ^14.0.2
+  google_fonts: ^6.3.0
   hijri: ^3.0.0
   hijri_calendar: ^1.0.7+7
   html: ^0.15.6
@@ -23,6 +24,7 @@ dependencies:
   lottie: ^3.3.1
   provider: ^6.1.5
   pull_to_refresh: ^2.0.0
+  quran: ^1.3.3
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
@@ -43,10 +45,16 @@ flutter:
     - assets/icon/star_icon.png
     - assets/icon/islamic_calendar_icon.png
     - assets/icon/glitter_icon.png
+    - assets/icon/quran_icon.png
+    - assets/icon/donation_icon.png
+
   fonts:
     - family: Liter
       fonts:
         - asset: assets/font/Liter-Regular.ttf
+    - family: AmiriQuran
+      fonts:
+        - asset: assets/font/Amiri,Funnel_Display,Liter,Nunito_Sans,Open_Sans/Amiri/Amiri-Bold.ttf
 
 flutter_launcher_icons:
   android: "launcher_icon"
