--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   quran: ^1.3.3
   quran_api: ^0.1.1
+  scrollable_positioned_list: ^0.3.8
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
