--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/icon/volume_icon.png
     - assets/icon/volume_outlined_icon.png
     - assets/icon/slider_filled_icon.png
+    - assets/icon/hadith_icon.png
 
   fonts:
     - family: Liter
