--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_fonts: ^6.3.0
   hijri: ^3.0.0
   hijri_calendar: ^1.0.7+7
+  home_widget: ^0.8.0
   html: ^0.15.6
   http: ^1.5.0
   lottie: ^3.3.1
