--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   audioplayers: ^6.5.0
+  cloud_firestore: ^6.0.1
   collection: ^1.19.1
   connectivity_plus: ^6.1.5
   firebase_auth: ^6.0.0
