--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
   string_similarity: ^2.1.1
+  table_calendar: ^3.2.0
   timezone: ^0.10.1
   url_launcher: ^6.3.2
 
