--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   string_similarity: ^2.1.1
   table_calendar: ^3.2.0
   timezone: ^0.10.1
-  uni_links: ^0.5.1
+  # uni_links: ^0.5.1
   url_launcher: ^6.3.2
 
 dev_dependencies:
