--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,8 @@
 	<string>To get location and direction</string>
 	<key>CFBundleName</key>
 	<string>ramadhan_companion_app</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to upload posters.</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
