--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,21 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  add_2_calendar: ^3.0.1
   audioplayers: ^6.5.0
   cloud_firestore: ^6.0.1
   collection: ^1.19.1
   connectivity_plus: ^6.1.5
+  date_format: ^2.0.9
   device_info_plus: ^11.5.0
+  dotted_border: ^3.1.0
   firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
+  firebase_storage: ^13.0.2
   flutter:
     sdk: flutter
   flutter_compass: ^0.8.1
+  flutter_image_compress: ^2.4.0
   flutter_inappwebview: ^6.1.5
   flutter_launcher_icons: ^0.14.4
   flutter_local_notifications: ^19.4.1
@@ -29,6 +34,8 @@ dependencies:
   home_widget: ^0.8.0
   html: ^0.15.6
   http: ^1.5.0
+  image_picker: ^1.2.0
+  intl: ^0.20.2
   lottie: ^3.3.1
   provider: ^6.1.5
   pull_to_refresh: ^2.0.0
@@ -81,6 +88,9 @@ flutter:
     - assets/icon/performance_boost_icon.png
     - assets/icon/security_icon.png
     - assets/icon/update_icon.png
+    - assets/mock_data/programme_1_mockup.jpg
+    - assets/mock_data/programme_2_mockup.jpg
+    - assets/mock_data/programme_3_mockup.jpg
 
   fonts:
     - family: Liter
