--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   quran: ^1.3.3
   quran_api: ^0.1.1
   scrollable_positioned_list: ^0.3.8
+  share_plus: ^12.0.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
@@ -91,6 +92,8 @@ flutter:
     - assets/mock_data/programme_1_mockup.jpg
     - assets/mock_data/programme_2_mockup.jpg
     - assets/mock_data/programme_3_mockup.jpg
+    - assets/icon/share_outlined_icon.png
+    - assets/icon/share_outlined_icon_1.png
 
   fonts:
     - family: Liter
