--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   flutter_launcher_icons: ^0.14.4
   flutter_local_notifications: ^19.4.1
+  flutter_map: ^8.2.2
   flutter_native_splash: ^2.4.6
   geocoding: ^4.0.0
   geolocator: ^14.0.2
@@ -37,6 +38,7 @@ dependencies:
   http: ^1.5.0
   image_picker: ^1.2.0
   intl: ^0.20.2
+  latlong2: ^0.9.1
   lottie: ^3.3.1
   provider: ^6.1.5
   pull_to_refresh: ^2.0.0
